# Loom

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  import.def
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
builder/: __main__.py
builder/scripts/: embedder.py  funcs.py  imports.py  sdk_parser.py
builder/templates/: Resource.cpp.template  Signatures.cpp.template  import.def.template
builder/utils/: context.py  enums.py  safewrite.py
cmake/: imgui.cmake
scripts/: embedder.py  funcs.py
scripts/templates/: Resource.hpp.template
src/: dllmain.cpp  runtime.cpp  runtime.hpp
src/client/: Client.cpp  Client.h  Client.hpp
src/client/hooks/: Hook.cpp  Hook.h  Hook.hpp  HookRegistry.hpp
src/client/hooks/client/: GameModeTickHook.h  LevelTickHook.h
src/client/hooks/input/: KeyboardFeedHook.hpp  MouseFeedHook.hpp  WindowProcHook.hpp  WndProcHook.cpp  WndProcHook.h  WndProcHook.hpp
src/client/hooks/network/: IncomingPackets.hpp
src/client/hooks/render/: DirectX.hpp  DirectXHook.cpp  DirectXHook.h  RenderMeshHook.hpp  SetupAndRenderHook.cpp  SetupAndRenderHook.h  SetupAndRenderHook.hpp
src/client/hooks/world/: GetFovHook.hpp  GetGammaHook.hpp  GetTimeOfDayHook.hpp  LevelTickHook.h  LevelTickHook.hpp
src/client/mods/: ISetting.hpp  Module.cpp  Module.hpp  Setting.hpp
src/client/mods/armor_hud/: ArmorHud.cpp  ArmorHud.hpp
src/client/mods/fps_counter/: FPSCounter.cpp  FPSCounter.hpp
src/client/mods/keystrokes/: Keystrokes.cpp  Keystrokes.hpp
src/client/mods/misc/: ArmorHud.cpp  ArmorHud.hpp  FPSCounter.cpp  FPSCounter.hpp
src/client/mods/misc/replay/: Replay.cpp  Replay.hpp  ReplayServer.hpp  ReplayStudio.hpp
src/client/mods/movement/: ToggleSprint.cpp  ToggleSprint.hpp
src/client/mods/player_tab_list/: PlayerTabList.cpp  PlayerTabList.hpp
src/client/mods/potion_hud/: PotionHud.cpp  PotionHud.hpp
src/client/mods/replay/: Replay.cpp  Replay.hpp
src/client/mods/toggle_sprint/: ToggleSprint.cpp  ToggleSprint.hpp
src/client/modules/: Module.cpp  Module.h  Module.hpp  Setting.hpp
src/client/modules/gui/: FPSCounter.cpp  FPSCounter.hpp  Zoom.cpp  Zoom.hpp
src/client/modules/misc/: Replay.cpp  Replay.hpp
src/client/modules/movement/: ToggleSprint.cpp  ToggleSprint.h  ToggleSprint.hpp
src/client/modules/world/: Fullbright.cpp  Fullbright.hpp  TimeChanger.cpp  TimeChanger.hpp
src/client/ui/: RenderCore.cpp  RenderCore.hpp  UIRender.cpp  UIRender.hpp
src/client/ui/elements/: Navigation.cpp  Navigation.hpp  ToastNotification.cpp  ToastNotification.hpp  Typography.cpp  Typography.hpp
src/client/ui/elements/screens/: SettingsScreen.cpp  SettingsScreen.hpp
src/client/ui/gui/: IScreen.hpp  ScreenManager.cpp  ScreenManager.hpp
src/client/ui/gui/screen/: HudEditorScreen.cpp  HudEditorScreen.hpp  HudScreen.cpp  HudScreen.hpp  SettingsScreen.cpp  SettingsScreen.hpp  StartScreen.cpp  StartScreen.hpp
src/client/ui/impl/: ImGuiImplMC.cpp  ImGuiImplMC.hpp
src/client/ui/screen/: CustomizationScreen.cpp  CustomizationScreen.hpp  IScreen.hpp  Screen.hpp  ScreenManager.hpp  SettingsScreen.cpp  SettingsScreen.hpp  StartScreen.cpp  StartScreen.hpp
src/client/ui/theme/: FontManager.cpp  FontManager.hpp
src/client/ui/utils/: ImGuiUtils.cpp  ImGuiUtils.hpp
src/core/: AddressResolver.cpp  AddressResolver.hpp  Asset.cpp  Asset.hpp  FakeImports.cpp  FakeImports.hpp  FileManager.cpp  FileManager.h  FileManager.hpp  Logger.cpp  Logger.h  Logger.hpp  Memory.cpp  Memory.hpp  Resource.cpp  Resource.hpp  Settings.cpp  Settings.hpp  SignatureManager.cpp  SignatureManager.h  Signatures.cpp  Signatures.h  Signatures.hpp
src/core/settings/: Configurable.cpp  Configurable.hpp  ISetting.hpp  Setting.hpp  SettingsManager.cpp  SettingsManager.hpp
src/core/utils/: hash.hpp
src/events/: EventHandler.hpp
src/events/input/: KeyboardEvent.hpp  MouseEvent.hpp  WindowProcessEvent.hpp
src/events/network/: IncomingPacketEvent.hpp
src/events/render/: ExecuteCommandListsEvent.hpp  HudElementRenderEvent.hpp  ModSettingsRenderEvent.hpp  PresentEvent.hpp  ResizeBuffersEvent.hpp  SetupAndRenderEvent.hpp
src/hooks/: EventHandler.hpp  Hook.hpp  HookManager.cpp  HookManager.hpp  InlineHook.hpp
src/hooks/impl/: InputHooks.cpp  InputHooks.hpp  NetworkHooks.cpp  NetworkHooks.hpp  RenderHooks.cpp  RenderHooks.hpp  WorldHooks.cpp  WorldHooks.hpp
src/hooks/impl/input/: WindowProcHook.hpp
src/hooks/impl/network/: IncomingPacketsHook.cpp  IncomingPacketsHook.hpp
src/hooks/impl/render/: DirectX.hpp  RenderMeshHook.hpp  SetupAndRenderHook.cpp  SetupAndRenderHook.hpp
src/sdk/: GameContext.cpp  GameContext.h  GameContext.hpp  Predefine.hpp  SDK.h
src/sdk/actors/: LocalPlayer.cpp  LocalPlayer.h  LocalPlayer.hpp
src/sdk/client/: ClientInstance.h  ClientInstance.hpp  GuiData.h  IClientInstance.h  IClientInstance.hpp
src/sdk/math/: RectangleArea.h
src/sdk/mc/bgfx/: bgfx.hpp
src/sdk/mc/client/game/: ClientInstance.hpp  IClientInstance.cpp  IClientInstance.hpp  IMinecraftGame.hpp
src/sdk/mc/client/gui/: GuiData.hpp  ScreenSizeData.hpp
src/sdk/mc/client/options/: Options.hpp
src/sdk/mc/client/player/: LocalPlayer.cpp  LocalPlayer.hpp
src/sdk/mc/client/render/: Mesh.hpp  Tessellator.cpp  Tessellator.hpp  TextureGroup.hpp
src/sdk/mc/common/: SubClientId.hpp
src/sdk/mc/network/: Compressibility.hpp  IPacketHandlerDispatcher.hpp  MinecraftPacketIds.hpp  MinecraftPackets.hpp  NetEventCallback.hpp  NetworkIdentifier.hpp  NetworkPeer.hpp  Packet.h
src/sdk/mc/world/: Container.hpp  SimpleContainer.hpp
src/sdk/render/: MinecraftUIRenderContext.h  MinecraftUIRenderContext.hpp  ScreenContext.h  Tessellator.cpp  Tessellator.h  Tessellator.hpp
src/sdk/utility/: RectangleArea.h  mce.hpp
utils/: Cargo.toml
utils/config/: Cargo.toml
utils/config/src/: lib.rs
utils/embedder/: Cargo.toml  build.rs
utils/embedder/src/: lib.rs
utils/linker/: Cargo.toml
utils/linker/src/: embedder.rs  lib.rs
vendors/: CMakeLists.txt  README.md
vendors/game_input/: CMakeLists.txt
vendors/imgui/: CMakeLists.txt
(+30 files in other folders)
